# Andarilho

./: .env  Cargo.toml  Dockerfile  Dockerfile.geckodriver  docker-compose.yml
src/: lib.rs  main.rs  wd_pool.rs
src/routes/: amazon_routes.rs  mod.rs
src/web_walkers/: amazon_walker.rs  driver_pool.rs  global_driver.rs  mod.rs
src/web_walkers/tests/: driver_pool_test.rs  get_urls_test.rs  mod.rs  record_result_tests.rs  start_multiple_windows.rs  test_mock_element.rs
tests/: driver_pool_test.rs  get_urls_test.rs  record_result_tests.rs  start_multiple_windows.rs  test_mock_element.rs
