[package]
name = "andarilho"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "=0.5.0-rc.3"
thirtyfour = "0.31.0"
regex = "1.5"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"