[package]
name = "andarilho"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "=0.5.0-rc.3"
thirtyfour = "0.31.0"
regex = "1.5"
tokio = { version = "1", features = ["full"] }
serde = "1.0.170"
serde_json = "1.0.100"
urlencoding = "1.0"
futures = "0.3.28"
lazy_static = "1.4.0"
